--- a/index.html
+++ b/index.html
@@ -9,28 +9,33 @@
 <body class="container">
     <header id="head">
         <div class="row">
-            <form class="form-inline pull-right" action="#">
-                <input type="search" placeholder=" search in me" class="form-control"/>
-                <a href="#"><span class="glyphicon glyphicon-search"></span></a>
-            </form>
-            <nav class="pull-right ">
-                <a href="#">Select from dropdown</a>
-                <a href="#">Quicklinks</a>
-            </nav>
-            <img src="images/logo.png" class="img-responsive" alt="logo"/>
+            <div class="col-md-12">
+                <div class="row">
+                    <form class="form-inline pull-right" action="#">
+                        <input type="search" placeholder=" search in me" class="form-control"/>
+                        <a href="#"><span class="glyphicon glyphicon-search"></span></a>
+                    </form>
+                    <nav class="pull-right ">
+                        <a href="#">Select from dropdown</a>
+                        <a href="#">Quicklinks</a>
+                    </nav>
+                    <img src="images/logo.png" class="img-responsive" alt="logo"/>
+                </div>
+                <div class="row">
+                    <nav class="navbar navbar-default nav2">
+                        <ul class=" nav navbar-nav">
+                            <li><a href="#">section 1</a></li>
+                            <li><a href="#">section 2</a></li>
+                            <li><a href="#">section 3</a></li>
+                            <li><a href="#">section 4</a></li>
+                            <li><a href="#">section 5</a></li>
+                            <li><a href="#">section 6</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <nav class="navbar navbar-default nav2">
-                <ul class=" nav navbar-nav">
-                    <li><a href="#">section 1</a></li>
-                    <li><a href="#">section 2</a></li>
-                    <li><a href="#">section 3</a></li>
-                    <li><a href="#">section 4</a></li>
-                    <li><a href="#">section 5</a></li>
-                    <li><a href="#">section 6</a></li>
-                </ul>
-            </nav>
-        </div>
+
     </header>
 <!--=================================HEADER=========================-->
     <section class="row">
