--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
                     <img src="images/logo.png" class="img-responsive" alt="logo"/>
                 </div>
                 <div class="row">
-                    <nav class="navbar navbar-default nav2">
-                        <ul class=" nav navbar-nav">
-                            <li><a href="#">section 1</a></li>
-                            <li><a href="#">section 2</a></li>
-                            <li><a href="#">section 3</a></li>
-                            <li><a href="#">section 4</a></li>
-                            <li><a href="#">section 5</a></li>
-                            <li><a href="#">section 6</a></li>
-                        </ul>
-                    </nav>
+                    <div class="col-md-12 col-md-offset-2">
+                        <nav class="navbar navbar-default nav2">
+                            <ul class=" nav navbar-nav text-center">
+                                <li><a href="#"> <span class="glyphicon glyphicon-apple text-center"></span><br/><br/>Travel Guide</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon glyphicon-book text-center"></span><br/><br/>Serivs</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon glyphicon-certificate text-center"></span><br/><br/>About</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon-bishop text-center"></span><br/><br/>The Tour</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon-cloud text-center"></span><br/><br/>How to</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
