--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     </header>
 <!--=================================HEADER=========================-->
     <section class="row">
-        <img src="images/sliderPic.jpg" alt="slider-pic"/>
-        <a href="#">icon</a>
+        <img src="images/sliderPic.jpg" alt="slider-pic" class="img-responsive"/>
+        <a href="#">
+            <span class="glyphicon glyphicon-search"></span>
+        </a>
     </section>
 <!--=====================================SLIDER=========================-->
     <section class="row">
@@ -51,7 +53,7 @@
         <p>
             And we mean that.
         </p>
-        <img src="images/Map.png" alt="map"/>
+        <img src="images/Map.png" alt="map" class="img-responsive"/>
     </section>
     <!--=============================MAP============================-->
     <section class="row">
@@ -86,7 +88,7 @@
     </section>
     <!--=============================================================Porfolio=====================================-->
     <section class="row">
-        <img src="images/Screen.jpg" alt=""/>
+        <img src="images/Screen.jpg" alt="" class="img-responsive"/>
     </section>
     <section class="row">
         <hr>
